[package]
name = "rust_blockchain_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.92"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
